remove css causing overflow issue on ambassador search at scren xl

--- a/app/assets/stylesheets/forever_style_guide/modules/_hero_simple.scss
+++ b/app/assets/stylesheets/forever_style_guide/modules/_hero_simple.scss
@@ -64,9 +64,6 @@ $hero_simple-sm-height-md: 260px;
   bottom: 0;
   padding: 30px;
 
-  @media (min-width: $screen-xxl) {
-    padding: 50px;
-  }
   @media (max-width: $screen-xs) {
     padding: 25px 20px;
   }
